# colored_text

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  TODO.md
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: basic.rs
src/: color.rs  config.rs  lib.rs  style.rs  terminal.rs  tests.rs
