[package]
name = "colored_text"
version = "0.1.0"
edition = "2021"
description = "A simple library for adding colors and styles to terminal text"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/colored_text"
keywords = ["color", "terminal", "ansi", "text", "formatting"]
categories = ["command-line-utilities", "text-processing"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]

[dev-dependencies]
rstest = "0.18.2"
