[package]
name = "colored_text"
version = "0.2.0"
edition = "2021"
description = "A simple library for adding colors and styles to terminal text"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
repository = "https://github.com/seapagan/colored_text"
keywords = ["color", "terminal", "ansi", "text", "formatting"]
categories = ["command-line-utilities", "text-processing"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]

[dev-dependencies]
rstest = "0.24.0"
